--- a/IBM2.html
+++ b/IBM2.html
@@ -365,11 +365,11 @@
         </div>
       </div>
     </div>
-    <div class="expanded landing__section">
+    <div class="expanded landing__section" style="background-color: #f0f4f7;">
       <div class="container">
         <div class="expanded__inner">
-          <div class="expanded__content" style="width: 50%">
-            <h1 class="middle_title" style="width: 200%">
+          <div class="expanded__content" style="width: 100%">
+            <h1 class="middle_title" >
               Information Architecture
             </h1>
             <p>
@@ -383,10 +383,9 @@
               in the category-term hierarchy. However, it's rarer for Jack to
               use the dataset-term hierarchy.
             </p>
+            <img class="img" src="images/IBM/EDPA_New/EDPA@2x.png" width="80%" style="margin-left: 10%;" />
           </div>
-          <div class="expanded__media" style="width: 40%">
-            <img class="img" src="images/IBM/EDPA_New/InfoArch.jpg" style="" />
-          </div>
+          
         </div>
       </div>
     </div>
