--- a/Quenews.html
+++ b/Quenews.html
@@ -361,12 +361,12 @@
             <div class="expanded__inner">
 
                 <div class="expanded__content">
-                    <h1 class="expanded__title">Quenews</h1>
+                    <h1 class="expanded__title">Queue</h1>
 
-                    <h3>Queue</h3>
+                    <h3>A one-stop solution</h3>
                     <p>Commuters can easily add a piece of news to their queue. In doing so, they don't have to frequently take out their cell phones or switch between apps, or to worry about WiFi. The only thing is to add several pieces of news to the queue,
                         and then enjoy the journey! Besides, they can see the total remaining time and plan accordingly basing on the commuting time.
-                        <h3>Recommendation</h3>
+                        <h3>Better content</h3>
                         <P>The recommendation algorithm is also based on the queue. Commuters can add a new piece of news to their queues according to their listening history. Also, if the current queue is finished, the system will automatically choose a
                             piece of news to play.</P>
                         <h3>A never-ending listening experience</h3>
@@ -408,7 +408,7 @@
                 <div class="expanded__content">
                     <h1 class="expanded__title">Card View: Better for commuters</h1>
 
-                    <h3>Cards & Gestures</h3>
+                    <h3>Cards & Gestures: simplified interaction</h3>
                     <p>
                         Sometimes it's difficult for commuters to interact precisely with the app (e.g. when they are walking or on a bus). Thus, we added a card view as well as some gestures to better illustrate the information and refine the interaction. They can tap the play
                         button to play it now, swipe up/down to add it to the top/bottom of the queue, and swipe left/right to switch between different news.
@@ -450,9 +450,9 @@
             <div class="expanded__inner">
 
                 <div class="expanded__content">
-                    <h1 class="expanded__title">Search</h1>
+                    <h1 class="expanded__title">Preference on content</h1>
 
-                    <h3>Categories</h3>
+                    <h3>A search function based on categories</h3>
                     <p>
                         We noticed that many users tend to listen to the news from same category. Some of them are sports fans, while others want to know about different media's perspective about a politic issue. As a result, we designed a search bar and several categories for
                         them to choose.
@@ -469,12 +469,13 @@
             <div class="expanded__inner">
 
                 <div class="expanded__content">
-                    <h1 class="expanded__title">Profile</h1>
+                    <h1 class="expanded__title">Motivation</h1>
 
                     <h3>A reward system</h3>
                     <p>
-                        In order to encourage commuters to get knowledge from the news, we designed a reward system. They can unlock different functions (e.g. customize the font and recommendation prefrences) with the more news they listen to.
+                        In order to encourage commuters to get knowledge from the news, we designed a reward system. They can get benefits (e.g. unlocking a new font, more high-quality content) with the more news they listen to.
                     </p>
+                    <P>Quenews will also send notifications before commuting time everyday to help commuters develop a good habit. </P>
                 </div>
                 <div class="expanded__media">
                     <img src="./images/Quenews/Profile_Mockup.png" width="70%">
