--- a/IBM2.html
+++ b/IBM2.html
@@ -353,12 +353,12 @@
             <h1 class="middle_title" style="width: 100%">Insight</h1>
             <h1>
               EDPA is a data asset platform allowing
-              <b>non-technical and technical employees to collaborate
-                together</b>
+              <b style="color: #4796E1">non-technical and technical employees</b> to collaborate
+                together
               on big data in a digital era.
               </h1>
               <h1>
-                It's also a platform to help companies <b>digitize and integrate</b> their data asset on the cloud.
+                It's also a platform to help companies <b style="color: #4796E1">digitize and integrate</b> their data asset on the cloud.
 
               </h1>
           </div>
