--- a/Campus+.html
+++ b/Campus+.html
@@ -256,7 +256,7 @@
 			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" class='hero__sub__down' fill="currentColor"  viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><path d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3z"/></svg>
 		</span>
     </div>
-    <div class="expanded landing__section" style="background-color: #fafafa;">
+    <div class="expanded landing__section" style="">
         <div class="container">
             <div class="expanded__inner">
                 <div class="expanded__content" style="width: 50%;">
@@ -265,9 +265,7 @@
                         (drinking fountain, vending machine, door, heater, etc.) to report and track an issue. The issue will be sent to facility administrators, allowing them to send work orders to facility members to fix the issue. This project takes
                         CMU as an example, but can be also applied in other schools.</p>
                     <ul class="vMenu" style="font-weight: bolder;">
-                        <li>
-                            <a onclick="myFunction(0)" style="cursor: pointer">Prototype</a>
-                        </li>
+
                         <li>
                             <a onclick="myFunction(1)" style="cursor: pointer">Research</a>
                         </li>
@@ -280,6 +278,9 @@
                         <li>
                             <a onclick="myFunction(5)" style="cursor: pointer">Design</a>
                         </li>
+                        <li>
+                            <a onclick="myFunction(0)" style="cursor: pointer">Prototype</a>
+                        </li>
                     </ul>
 
                 </div>
@@ -289,17 +290,7 @@
             </div>
         </div>
     </div>
-    <div class="expanded landing__section" style="background-color: #f4f4f7;">
-        <div class="container">
-            <div class="expanded__inner">
-                <div id="0" class="expanded__content" style="width: 100%">
-                    <h1 class="middle_title">If you don't have time... Here's a prototype!</h1>
-                    <iframe width="100%" height="590px;" src="https://www.youtube.com/embed/Ljvyoisb96U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="expanded landing__section" style="background-color: #fafafa;">
         <div class="container">
             <div class="expanded__inner">
@@ -588,7 +579,17 @@
             </div>
         </div>
     </div>
+    <div class="expanded landing__section" style="background-color: #f4f4f7;">
+        <div class="container">
+            <div class="expanded__inner">
+                <div id="0" class="expanded__content" style="width: 100%">
+                    <h1 class="middle_title">Prototype</h1>
+                    <iframe width="100%" height="590px;" src="https://www.youtube.com/embed/Ljvyoisb96U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="expanded landing__section">
         <div class="container">
             <div class="expanded__inner">
