--- a/Campus+.html
+++ b/Campus+.html
@@ -579,7 +579,7 @@
             </div>
         </div>
     </div>
-    <div class="expanded landing__section" style="background-color: #f4f4f7;">
+    <div class="expanded landing__section" style="">
         <div class="container">
             <div class="expanded__inner">
                 <div id="0" class="expanded__content" style="width: 100%">
