--- a/Quenews.html
+++ b/Quenews.html
@@ -391,6 +391,18 @@
             </div>
         </div>
     </div>
+    <div class="expanded landing__section" style="background-color: #5654CD;">
+        <div class="container">
+            <div class="expanded__inner">
+
+                <div class="expanded__content" style="width: 100%;">
+                    <h1 class="expanded__title" style="color: #fff;">Detailed Interaction</h1>
+
+                    <img src="./images/Quenews/Gifs/new/Queue.gif" width="100%">
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="expanded landing__section">
         <div class="container">
             <div class="expanded__inner">
@@ -404,7 +416,7 @@
                     </p>
                     <h3>Play Progress</h3>
                     <P>
-                        The current time/total time of a piece of news are represented on the slider.
+                        The current time/total time of a piece of news are represented on the slider, which is clear and could increase the touching area of the slider.
                     </P>
                 </div>
                 <div class="expanded__media">
@@ -458,26 +470,42 @@
             </div>
         </div>
     </div>
-    <div class="expanded landing__section" style="background-color: #ffffff">
+    <div class="expanded landing__section" style="background-color: #5654CD;">
         <div class="container">
             <div class="expanded__inner">
 
-                <div class="expanded__content">
-                    <h1 class="expanded__title">Preference on content</h1>
+                <div class="expanded__content" style="width: 40%;">
+                    <h1 class="expanded__title" style="color: #fff;">Interaction Design</h1>
 
-                    <h3>A search function based on categories</h3>
-                    <p>
-                        We noticed that many users tend to listen to the news from same category. Some of them are sports fans, while others want to know about different media's perspective about a politic issue. As a result, we designed a search bar and several categories for
-                        them to choose.
-                    </p>
+
                 </div>
                 <div class="expanded__media">
-                    <img src="./images/Quenews/Search_Mockup.png" width="70%">
+                    <img class="img" src="./images/Quenews/Gifs/new/Article.gif" width="50%" style="box-shadow: 0px 0px 20px #505050;">
                 </div>
             </div>
         </div>
     </div>
-    <div class="expanded landing__section" style="">
+    <div class="expanded landing__section" style="background-color: #ffffff">
+        <div class="container">
+            <div class="expanded__inner">
+
+                <div class="expanded__content" style="width: 40%;">
+                    <h1 class="expanded__title">Preference on content</h1>
+
+                    <h3>Search, recommendation, and categories</h3>
+                    <p>
+                        We noticed that many users tend to listen to the news from same category. Some of them are sports fans, while others want to know about different media's perspective about a politic issue. As a result, we designed a search bar based on categories and
+                        several categories for them to choose from.
+                    </p>
+                </div>
+                <div class="expanded__media" style="width: 70%; margin-left: 5%;">
+                    <img class="img" src="./images/Quenews/Search_Mockup.png" width="50%">
+                    <img class="img" src="./images/Quenews/Queue_Mockup.png" width="50%" style="float: right;margin-left: -5%;">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="expanded landing__section" style="background-color: #fafafa;">
         <div class="container">
             <div class="expanded__inner">
 
@@ -497,7 +525,7 @@
             </div>
         </div>
     </div>
-    <div class="expanded landing__section">
+    <div class="expanded landing__section" style="background-color: #f4f5f6;">
         <div class="container">
             <div class="expanded__inner">
                 <div style="width: 100%">
@@ -509,7 +537,7 @@
             </div>
         </div>
     </div>
-    <div class="expanded landing__section">
+    <div class="expanded landing__section" style="background-color: #fafafa;">
         <div class="container">
             <div class="expanded__inner">
                 <div class="expanded__content" style="width: 100%">
