--- a/Quenews.html
+++ b/Quenews.html
@@ -386,7 +386,7 @@
                         <P>Quenews can provide a never-ending listening experience to its users - they can enjoy the news the like whenever they open the app.</P>
                 </div>
                 <div class="expanded__media">
-                    <img src="./images/Quenews/Queue_Mockup.png" width="70%">
+                    <img class="img" src="./images/Quenews/Queue_Mockup.png" width="70%">
                 </div>
             </div>
         </div>
@@ -420,7 +420,7 @@
                     </P>
                 </div>
                 <div class="expanded__media">
-                    <img src="./images/Quenews/Discover_Mockup.png" width="70%">
+                    <img class="img" src="./images/Quenews/Discover_Mockup.png" width="70%">
 
                 </div>
             </div>
@@ -440,7 +440,7 @@
                     </p>
                 </div>
                 <div class="expanded__media">
-                    <img src="./images/Quenews/Discover_Card_Mockup.png" width="70%">
+                    <img class="img" src="./images/Quenews/Discover_Card_Mockup.png" width="70%">
                 </div>
             </div>
         </div>
