--- a/IBM2.html
+++ b/IBM2.html
@@ -288,7 +288,7 @@
               EDPA is a platform used by technical and non-technical employees
               together helping companies manage their big data. As the only
               designer in my team, I redesigned its information architecture,
-              user flows, and 40+ interfaces with several engineers in a week.
+              user flows, and 40+ interfaces with several engineers, and managers.
             </p>
           </div>
           <div class="expanded__media" style="width: 70%">
@@ -327,7 +327,7 @@
             <h3>Same product, different goals</h3>
             <p>
               Non-technical and technical employees need to work on EDPA
-              together, although they have different needs and goals
+              together, although they have different needs and goals. Non-tech people tend to only search for the data, while tech people need to manipulate the datasets and do CRUD.
             </p>
           </div>
           <div class="expanded__media" style="width: 50%">
@@ -380,7 +380,7 @@
               Since they are not closely related, I decided to put them in a
               hamburger navigation as three major tabs in Data Asset Management.
               When Charles is managing the dataset, he can also manage the data
-              in the category-term hierarchy. However, it's rarer for Jack to
+              in the category-term hierarchy (since he has a higher authority, as shown by the small arrow connecting two hierarchies). However, it's rarer for Jack to
               use the dataset-term hierarchy.
             </p>
             <img class="img" src="images/IBM/EDPA_New/EDPA@2x.png" width="80%" style="margin-left: 10%;" />
@@ -400,9 +400,9 @@
             <p>
               The tree view clearly shows the hierarchy of categories and terms,
               allowing users to find a category/term manually. There's also a
-              global search bar to help them search by keywords or status.
+              global search area to help them search by keywords or status.
               Because of the limited space, I designed an Event Button to show
-              notifications when the data updates.
+              notifications when some data update, or when there's a quality alert.
             </p>
             <img
               class="img"
@@ -420,22 +420,23 @@
           <div class="expanded__content" style="width: 100%">
             <h1 class="expanded__title">Dataset Management</h1>
 
-            <h3>Dataset for engineers</h3>
+            <h3>Datasets for engineers</h3>
             <p>
               It took me a while to persuade engineers in my team to implement
-              the Card Based Design, by Competitor Analysis and A/B Testing.
+              the Card-Based Design, by Competitor Analysis and A/B Testing.
               From my opinion, when there's only a few of the elements and we
-              don't have to sort them, Cards are better than tables.
+              don't have to sort them, Cards are better than tables. Different datasets are differentiated by colors, which is clear and makes the design style more vivid.
             </p>
             <img
               class="img"
               src="images/IBM/EDPA_New/Dataset.jpg"
               style="box-shadow: 0px 0px 20px #c0c0c0; width: 80%; margin-left: 10%"
             />
+            <h3>Detailed Dataset</h3>
             <p>
               Turning on / off the automatic update is important. Therefore, the
               according button was designed blue and other buttons are icons
-              from IBM design language and are greyscale.
+              from IBM design language and are greyscale. To be consistent, I also used card-based design on this page.
             </p>
             <img
               class="img"
@@ -447,6 +448,8 @@
               src="images/IBM/EDPA_New/Term.jpg"
               style="box-shadow: 0px 0px 20px #c0c0c0; width: 80%; margin-left: 10%"
             />
+            <h3>Pop-up Window</h3>
+            <P>In order to help users better focus on what they should do, I used background blur and a wider color band for the pop-up window. </P>
             <img
               class="img"
               src="images/IBM/EDPA_New/Sample%20Data.jpg"
@@ -467,14 +470,14 @@
         <div class="expanded__inner">
           <div class="expanded__content" style="width: 100%">
             <h1 class="middle_title" style="">
-              What did I learn from that week?
+              What did I learn from this project?
             </h1>
 
             <p>
               - Only when we understand the technical and business part of the
               product can we use design to drive it. <br />- Product and Design
-              Thinking are important even for engineers. <br />- It's important
-              to learn how to communicate with and persuade others.
+              Thinking, and the design framework are important even for a time-demanding project. <br />- It's important
+              to learn how to communicate with and persuade others without authority.
             </p>
           </div>
         </div>
