--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <nav class="nav__mobile"></nav>
         <div class="container">
             <div class="navbar__inner">
-                <a href="index.html" class="navbar__logo" style="color: #303030">William</a>
+                <a href="index.html" class="navbar__logo" style="color: #303030">William Jin</a>
                 <nav class="navbar__menu">
                     <ul>
                         <li><a href="index.html">Home</a></li>
