--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                     <P class="subtitle" style="margin-top: 100px">William Jin | Product Innovator</P>
                     <h1 style="font-size: 50px;   color: #303030; letter-spacing: 0px">
                         <b>Hi, I'm William.</b> I design (almost) everything.</h1>
-                    <p style="font-size: 20px; font-weight: lighter; ">I'm passionate about creating great products by combining ux, business and technology. You can view my <a href="CustomizedDesign.html" class="alink"><b>Playground</b></a>, find me on <a href="https://www.linkedin.com/in/qiu-william-jin-405929168/"
-                            target="_blank" class="alink"><b>LinkedIn</b></a>, or just send me an <a target="_blank" href="mailto:qiuj@andrew.cmu.edu" class="alink"><b>Email</b></a>.</p>
+                    <p style="font-size: 20px; font-weight: lighter; line-height: 2.0;">I'm passionate about creating great products by combining ux, business and technology. You can view my <a href="CustomizedDesign.html" class="alink"><b>🏀Playground</b></a>, find me on <a href="https://www.linkedin.com/in/qiu-william-jin-405929168/"
+                            target="_blank" class="alink"><b>👔LinkedIn</b></a>, or just send me an <a target="_blank" href="mailto:qiuj@andrew.cmu.edu" class="alink"><b>📧Email</b></a>.</p>
                     <a target="_blank" href="./pdfs/resume.pdf" class="resume button button__primary" style="letter-spacing: 1px">My Resume</a><br>
                 </div>
             </div>
